--- a/src/styles/ListCard.module.css
+++ b/src/styles/ListCard.module.css
@@ -25,8 +25,8 @@
 }
 
 .optionFilter{
-    min-width: 10rem;
-    padding: 1rem;
-    background-color: var(--background-color);
-    border-radius: 1rem;
+    width: 100%;
+    padding: 1.3rem;
+    margin: 1rem 0;
+    border: none;
 }
