--- a/src/styles/Card.module.css
+++ b/src/styles/Card.module.css
@@ -100,3 +100,18 @@
     justify-content: space-between;
     align-items: center;
 }
+
+
+.extrasContainer{
+    display: flex;
+    justify-content: start;
+    gap: 0.5rem;
+    margin: 0;
+}
+
+.extrasText{
+    color: var(--order-text-color);
+    font-weight:600;
+    text-align: left;
+    margin: 0;
+}
